blend_output.txt
    Blocking waiting for file lock on build directory
    Checking astraweave-asset v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-asset)
error[E0061]: this method takes 1 argument but 3 arguments were supplied
   --> astraweave-asset\src\lib.rs:118:35
    |
118 |             let handle = importer.import(blend_path, options, output_path).await?;
    |                                   ^^^^^^             -------  ----------- unexpected argument #3 of type `std::option::Option<std::path::PathBuf>`
    |                                                      |
    |                                                      unexpected argument #2 of type `std::option::Option<ConversionOptions>`
    |
note: method defined here
   --> C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\crates\astraweave-blend\src\importer.rs:174:18
    |
174 |     pub async fn import(&mut self, source_path: impl AsRef<Path>) -> BlendResult<ConversionResult> {
    |                  ^^^^^^
help: remove the extra arguments
    |
118 -             let handle = importer.import(blend_path, options, output_path).await?;
118 +             let handle = importer.import(blend_path).await?;
    |

error[E0599]: no method named `await_result` found for struct `ConversionResult` in the current scope
   --> astraweave-asset\src\lib.rs:119:33
    |
119 |             let result = handle.await_result().await?;
    |                                 ^^^^^^^^^^^^ method not found in `ConversionResult`

error[E0061]: this method takes 1 argument but 3 arguments were supplied
   --> astraweave-asset\src\lib.rs:142:35
    |
142 |             let handle = importer.import(blend_path, options, output_path).await?;
    |                                   ^^^^^^             -------  ----------- unexpected argument #3 of type `std::option::Option<std::path::PathBuf>`
    |                                                      |
    |                                                      unexpected argument #2 of type `std::option::Option<ConversionOptions>`
    |
note: method defined here
   --> C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\crates\astraweave-blend\src\importer.rs:174:18
    |
174 |     pub async fn import(&mut self, source_path: impl AsRef<Path>) -> BlendResult<ConversionResult> {
    |                  ^^^^^^
help: remove the extra arguments
    |
142 -             let handle = importer.import(blend_path, options, output_path).await?;
142 +             let handle = importer.import(blend_path).await?;
    |

error[E0599]: no method named `subscribe_progress` found for struct `ConversionResult` in the current scope
   --> astraweave-asset\src\lib.rs:143:38
    |
143 |             let progress_rx = handle.subscribe_progress();
    |                                      ^^^^^^^^^^^^^^^^^^ method not found in `ConversionResult`

error[E0308]: mismatched types
   --> astraweave-asset\src\lib.rs:145:17
    |
145 |             Ok((handle, progress_rx))
    |                 ^^^^^^ expected `ImportHandle`, found `ConversionResult`

Some errors have detailed explanations: E0061, E0308, E0599.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `astraweave-asset` (lib) due to 5 previous errors
